apps/prometheus/base/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  ports:
    - name: tcp-prometheus
      port: 8080
  selector:
    app: prometheus-server
  type: ClusterIP
