apps/prometheus/base/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  labels:
    app: prometheus-server
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus-server
