apps/prometheus/base/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: prometheus-policy
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: prometheus
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["GET", "POST", "OPTIONS", "DELETE", "PATCH"]
      when:
        - key: request.headers[x-envoy-external-address]
          values:
            - "94.62.74.120" # Diego
    - to:
      - operation:
          methods:
          - GET
          - POST
          paths:
          - /metrics
          - /actuator/prometheus
          - /api/v1/*
      when:
      - key: request.headers[User-Agent]
        values:
        - Prometheus/*
        - Go-http-client/1.1
